--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "truffle": "5.2.6",
     "web3": "^1.3.5",
     "web3-eth-abi": "^1.3.4",
-    "web3-utils": "^1.3.4"
+    "web3-utils": "^1.3.4",
+    "@chainlink/contracts": "^0.1.7"
   },
   "scripts": {
     "clean": "rimraf ./build",
